improved views teaser list of Category members left and right in cyclope.less

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -74,13 +74,18 @@ span.category_title a {
 .teaser {margin:15px 0;vertical-align:top;clear:both;border-bottom:1px dotted;overflow:auto;}
 
 /* ### teaser list of Category members left and right ### */
-#right .teaser_icon_container, #left .teaser_icon_container {display:block;float:none;border:1px solid;padding:4px;}
-#right .teaser_text_container, #left .teaser_text_container {width:100% ;display:inline;}
+#right .teaser_icon_container, #left .teaser_icon_container {display:block;float:none;padding:4px;}
+#right .teaser_text_container, #left .teaser_text_container {width:100% ;display:inline;margin-top:5px;}
 #right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; }
-#right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;}
-#right .teaser .summary, #left .teaser .summary {font-size:12px;}
+#right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;margin-bottom:5px;} 
+#right .teaser .summary, #left .teaser .summary {font-size:12px; margin:0;}
 #right .btn, #left .btn {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
 #right .pretitle-container, #left .pretitle-container {font-size:12px;}
+#right .author, #left .author {font-size:12px; margin-top:5px; margin-bottom:5px;}
+#right .teaser_more, #left .teaser_more {margin:0 0 10px;}
+#right .teaser_more img, #left .teaser_more img {width:10%;}
+
+
 
 
 
