--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -1,5 +1,5 @@
 {% load i18n fb_versions dbgettext_tags cyclope_utils %}
-<div class="content-view article teaser article-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
+<div class="content-view article teaser article-teaser {% inline_content_classes %}">
 	{% if simplified_view %}
 		<div class="teaser_text_container_simplified">
 			<h2 class="title">
