--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
@@ -1,18 +1,18 @@
 {% load fb_versions cyclope_utils %}
 
 	{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-  <div class="teaser_icon {% if region_name %}{% inline_content_classes %}{% endif%}">
+  <div class="teaser_icon {% inline_content_classes %}">
 		<div class="thumbnail">
 					<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
 				{% if current_object.image %}
 				  <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="article icon"/>
-					<img class="img-responsive" src="{% version current_object.image.path 'labeled_icon_bootstrap' %}" border="0"/>
+					<img class="img-responsive" src="{% version current_object.image.path 'labeled_icon_bootstrap' %}" alt="{{ current_object.name }}" border="0"/>
 				{% else %}
-					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
+					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" alt="not-available" border="0"/>
 				{% endif %}
 			</a>
 			<div class="caption">
-				<h4><a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name|truncatechars:40 }}</a></h4>
+				<h4 class="title"><a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name|truncatechars:40 }}</a></h4>
 			</div>
 		</div>
 	</div>
