added css icon_list_container

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -58,9 +58,7 @@ span.category_title a {
 	float:left;
 	padding-right:5px;}
 
-.teaser_icon {
-
-	margin-right:10px;}
+.teaser_icon {}
 
 .article-teaser{  }
 .teaser_icon_container:hover {background:transparent;}
@@ -72,6 +70,13 @@ span.category_title a {
 .teaser h2.title {clear:both;margin:0;}
 .teaser_more {margin:5px 0 10px;clear:both;}
 .teaser {margin:15px 0;vertical-align:top;clear:both;border-bottom:1px dotted;overflow:auto;}
+
+
+
+/* ### teaser labeled icon ### */
+
+.icon_list_container .title {text-align:center;}
+
 
 /* ### teaser list of Category members left and right ### */
 #right .teaser_icon_container, #left .teaser_icon_container {display:block;float:none;padding:4px;}
@@ -88,5 +93,3 @@ span.category_title a {
 
 
 
-
-  
