changed font-size in collection title in left and right

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -90,6 +90,10 @@ span.category_title a {
 #right .teaser_more, #left .teaser_more {margin:0 0 10px;}
 #right .teaser_more img, #left .teaser_more img {width:10%;}
 
+/* ### teaser list of Category members left and right ### */
+#right .collection .title, #left .colecction .title {font-size:10px;}
+
+
 
 
 
