--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_labeled_icon.html
@@ -1,11 +1,8 @@
-{% load fb_versions cyclope_utils %}
-
-	{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-  <div class="teaser_icon {% inline_content_classes %}">
+{% load i18n cyclope_utils fb_versions dbgettext_tags %}
+<div class="teaser_icon {% inline_content_classes %}">
 		<div class="thumbnail">
-					<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
+			<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
 				{% if current_object.image %}
-				  <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="article icon"/>
 					<img class="img-responsive" src="{% version current_object.image.path 'labeled_icon_bootstrap' %}" alt="{{ current_object.name }}" border="0"/>
 				{% else %}
 					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" alt="not-available" border="0"/>
@@ -14,24 +11,12 @@
 			<div class="caption">
 				<h4 class="title"><a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name|truncatechars:40 }}</a></h4>
 			</div>
+			<p class="teaser_more center-block">
+				<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
+					{% trans "More" %}
+				</a>
+				{% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
+			</p>
 		</div>
 	</div>
-	{% elif CYCLOPE_THEME_TYPE == 'classic' %}
-	<div class="content-view media labeled_icon {{ current_object.get_object_name }}">
-		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
-			{% if current_object.image %}
-				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" border="0"/>
-				<img class="icon" src="{% version current_object.image.path 'thumbnail' %}" border="0"/>
-			{% else %}
-				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" border="0"/>
-				<img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
-			{% endif %}
-		</a>
-
-		<h2 class="title">
-			<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
-			{{ current_object.name|truncatechars:40 }}
-			</a>
-		</h2>
-	</div>
-	{% endif %} 
