--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -20,8 +20,6 @@
     </div>
 
   <h2 class="title">
-		{% if CYCLOPE_THEME_TYPE == 'classic' %}<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />{% endif %}
-
 		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
   </h2>
 
@@ -35,11 +33,15 @@
 		 {% endif %}
 
 		{% include "cyclope/author_block_teaser.html" with author=current_object.author %}
-		 <p class="teaser_more center-block">
-		 <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a>
-		 {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
-		 {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />{% endif %}
-		 </p>
+		<p class="teaser_more center-block">
+			<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
+				{% trans "More" %}
+			</a>
+			{% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+			{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+				<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
+			{% endif %}
+		</p>
 
 </div>
   <div class="clear"></div>
