more added css icon_list_container

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -75,7 +75,8 @@ span.category_title a {
 
 /* ### teaser labeled icon ### */
 
-.icon_list_container .title {text-align:center;}
+.icon_list_container .title {text-align:center;height:40px;overflow:hidden;}
+.icon_list_container .teaser_more {text-align:center;}
 
 
 /* ### teaser list of Category members left and right ### */
