--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -90,8 +90,15 @@ span.category_title a {
 #right .teaser_more, #left .teaser_more {margin:0 0 10px;}
 #right .teaser_more img, #left .teaser_more img {width:10%;}
 
-/* ### teaser list of Category members left and right ### */
-#right .collection .title, #left .colecction .title {font-size:10px;}
+/* ### teaser list of Category of a collection left and right ### */
+#right .collection h1.title, #left .colecction h1.title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
+#right .collection_image img, #left .collection_image img {width:70%;padding:0;}
+#right .collection .summary, #left .collection .summary {font-size:12px;}
+#right .teaser, #left .teaser {padding-bottom:10px; margin-bottom:5px;}
+#right .collection_teaser, #left .collection_teaser {margin:0;}
+#right .category_title, #left .category_title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
+#right .collection_header, #left .collection_header {margin:0;}
+
 
 
 
