feat (forum related views)

--- a/cyclope/apps/forum/templates/collections/category_create_topic.html
+++ b/cyclope/apps/forum/templates/collections/category_create_topic.html
@@ -11,14 +11,15 @@
 
 {% else %}
 
-  <h1 class="title">
+  <h2 class="title new-topic-title">
       {% blocktrans %} New topic in  {{ forum }} forum {% endblocktrans %}
-  </h1>
-<div class="create_forum">
-  <form action="{{ action_url }}" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" class="submit" value="{% trans "Create" %}" />
-  </form>
-</div>
+  </h2>
+
+    <div class="create_forum">
+        <form action="{{ action_url }}" method="post">{% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="submit" value="{% trans "Create" %}" />
+        </form>
+    </div>
 {% endif %}
 {% endblock content%}
