Improved Carousel Views

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -117,3 +117,15 @@ span.category_title a {
 /* ### alphabetical teaser list of all the members of the Collection's Categories ### */
 	.alphabetical-pagination .pagination > li > a {text-align:center;margin:0 5px 0 0;}
 	.alphabetical-pagination .pagination {margin:0 0 20px;}
+	
+/*### carousel view of Category members left and right ###*/
+#right .carousel-caption p, #left .carousel-caption p {display:none;}
+#right .carousel-caption, #left .carousel-caption {padding-bottom:10px;}
+#right .carousel-caption h3, #left .carousel-caption h3 {margin-bottom:0;}
+#right .carousel-indicators, #left .carousel-indicators {bottom:0;}
+#right .carousel-indicators ol, #left .carousel-indicators ol {margin-bottom:0;}
+#right .carousel-inner > .item > a > img, #left .carousel-inner > .item > a > img {margin:0 auto;}
+
+/*### carousel view of Category members###*/
+.carousel .carousel-indicators {Bottom:0;}
+.carousel .media {margin-top:0;}
