--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -76,6 +76,27 @@ span.category_title a {
 .teaser {margin:15px 0;vertical-align:top;clear:both;border-bottom:1px dotted;overflow:auto;}
 
 
+/* Full Category content -  media_library_base_detail */
+.content-view.document.media.detail .tools.meta-content{
+	display: inline-block;
+	padding: 5px 10px;
+}
+
+.content-view.document.media.detail .html-content.summary{
+	clear: both;
+	margin-top: 10px;
+}
+
+.content-view.document.media.detail .html-content.summary p,
+.content-view.article.inline_detail.article-inline_detail .summary p,
+.content-view.article.inline_detail.article-inline_detail .article_content p{
+	text-align: justify;
+}
+
+.content-view.article.inline_detail.article-inline_detail .pretitle{
+	display: none;
+}
+
 
 /* ### teaser labeled icon ### */
 
