--- a/cyclope/templates/cyclope/inline_view.html
+++ b/cyclope/templates/cyclope/inline_view.html
@@ -1,3 +1,10 @@
 {# This template wraps a view when inserted inline in a region #}
-{% block extra_head %}{{ block.super }}{% endblock %}
-{% block content %}{{ block.super }}{% endblock %}
+
+{% block extra_head %}
+    {{ block.super }}
+{% endblock %}
+
+
+{% block content %}
+    {{ block.super }}
+{% endblock %}
