--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -10,7 +10,7 @@
 
 	<div class="content-view {{ current_object.get_object_name }} media detail">
 
-		<h1 class="title">{{ current_object.name }}</h1>
+		<h3 class="title">{{ current_object.name }}</h3>
 
 		{% include 'cyclope/content_tools_block.html' %}
 
@@ -28,9 +28,9 @@
 		{% endblock %}
 
 		{% block media_content_download %}
-		<div class="action-content download_link">
+		<button type="button" class="action-content download_link btn btn-default pull-right">
 				<a target="_blank" href="{{ current_object.media_file }}">{% trans "download file" %}</a>
-		</div>
+		</button>
 		{% endblock %}
 
 		<div class="html-content summary">{{ current_object.description|smart_style }}</div>
