improved teaser list of the root Categories of a Collection view

--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -1,29 +1,30 @@
 {% extends host_template %}
 {% load i18n cyclope_utils fb_versions %}
 {% block content %}
-<div>
-    {% include 'collections/collection_info.html' %}
-    {% for category in categories %}
-        <div class="category teaser {% if category.image %}clear_right{% endif %}" >
-            <h2 class="title"><a href="{% url category-default category.slug %}">{{ category.name }}</a></h2>
-            {% if category.image %}
-                <a href="{% url category-default category.slug %}">
-                {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-                    <img class="icon" src="{% version category.image.path 'small' %}" border="0"/>
-                {% elif CYCLOPE_THEME_TYPE == 'classic' %}
-                    <img class="icon" src="{% version category.image.path 'thumbnail' %}" border="0"/>
-                {% endif %}
-                </a>
-            {% endif %}
-            {% if category.description %}
-            <div class="summary">
-            {{ category.description|smart_style }}
+  <div class="content-view collection">
+      {% include 'collections/collection_info.html' %}
+
+      {% for category in categories %}
+        <div class="teaser">
+          {% if category.image %}
+            <div class="teaser_icon_container">
+              <a href="{% url category-default category.slug %}">
+                <img class="icon" src="{% version category.image.path 'small' %}" border="0" alt="{{ category.name }}"/>
+              </a>
             </div>
+          {% endif %}
+          <div class="teaser_text_container{% if not category.image %}_fullwidth{% endif %}">
+            <h2 class="title">
+              <a href="{% url category-default category.slug %}">{{ category.name }} </a>
+            </h2>
+            {% if category.description %}
+              <div class="html-content summary">{{ category.description|smart_style }}</div>
             {% endif %}
-            {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-            <a class="btn btn-primary" href="{% url category-default category.slug %}">{% trans "View contents" %}</a>
-            {% endif %}
+            <p class="teaser_more">
+              <a class="btn btn-primary" href="{% url category-default category.slug %}">{% trans "View contents" %}</a>
+            </p>
+          </div>
         </div>
-    {% endfor %}
-</div>
+      {% endfor %}
+
 {% endblock %}
