TESTING: Ran 120 tests in 20.805s: OK (skipped=2) corrected failing test: add frontend edition link at category_contents_base.html updated default layouts and regions in tests fixtures using a regular expression at generic views classes search added expected testing classes to templates: - cyclope/apps/feeds/templates/feeds/feed_detail.html - cyclope/core/collections/templates/collections/category_carousel.html - cyclope/core/collections/templates/collections/category_filtered_list.html - cyclope/core/collections/templates/collections/category_labeled_icon_list.html - cyclope/core/collections/templates/collections/category_root_items_list.html - cyclope/core/collections/templates/collections/category_slideshow.html - cyclope/core/collections/templates/collections/category_teaser_list.html - cyclope/templates/comments/comments_list.html - cyclope/templates/cyclope/author_detail.html - cyclope/templates/cyclope/author_teaser.html and other minor fixes

--- a/cyclope/apps/feeds/templates/feeds/feed_detail.html
+++ b/cyclope/apps/feeds/templates/feeds/feed_detail.html
@@ -6,7 +6,7 @@
 
 {% alias feed as 'current_object' %}
 
-<div class="content-view feed detail feed-detail">
+<div class="regionview feed detail content-view feed-detail">
 
   <h1 class="title">{% trans feed.name %}</h1>
 
