--- a/cyclope/templates/cyclope/author_detail.html
+++ b/cyclope/templates/cyclope/author_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-<div class="well content-view authors detail authors-detail">
+<div class="regionview author detail well content-view authors-detail">
         <center>
             {% if current_object.image %}
             <div class="media-content">
