--- a/cyclope/core/collections/templates/collections/category_carousel.html
+++ b/cyclope/core/collections/templates/collections/category_carousel.html
@@ -9,7 +9,7 @@
 
 
 {% block content %}
-<div class="{% teaser_layout_classes %}">
+<div class="{% teaser_layout_classes %} regionview category carousel">
 	<div id="carousel-{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}" class="carousel slide" {% if view_options.auto_play %}data-ride="carousel"{% endif %}>
 
 			{% with categorizations|first as first_categorization %}
