--- a/cyclope/templates/comments/comments_list.html
+++ b/cyclope/templates/comments/comments_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="content-view comment comments-list">
+<div class="regionview customcomment list comments-list">
   {% include 'comments/list.html' %}
 </div>
 {% endblock %}
