feat(full category content view) make views bootstrap style + modify the behaviour of full list media items (document, external content, movies, pictures, etc) trought  inline_detail and base_detail

--- a/cyclope/apps/articles/templates/articles/article_inline_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_inline_detail.html
@@ -11,7 +11,7 @@
   {% endif %}
 
   <a id="article-{{ article.slug }}" href="{% url article-detail article.slug %}">
-    <h3 class="title">{% trans article.name  %}</h3>
+    <h3 class="title">{% trans article.name  %} <span class="glyphicon glyphicon-link" aria-hidden="true"></span> </h3>
   </a>
 
   {% if article.summary %}
