--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -10,16 +10,17 @@
 
 	<div class="content-view {{ current_object.get_object_name }} media detail">
 
+
 		<h3 class="title">{{ current_object.name }}</h3>
 
-		{% include 'cyclope/content_tools_block.html' %}
+		<!--{% include 'cyclope/content_tools_block.html' %}-->
 
 		{% include "cyclope/author_block.html" with author=current_object.author %}
 
 		{% if current_object.image %}
 			<div class="media-content">
 				{% if current_object.content_url %}<a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif%} >{% endif%}
-				<img align="center" src="{% version current_object.image.path 'big' %}"/>
+				<img class="center img-responsive" align="center" src="{% version current_object.image.path 'big' %}"/>
 				{% if current_object.content_url %}</a>{% endif%}
 			</div>
 		{% endif %}
@@ -27,25 +28,32 @@
 		{% block media_content %}
 		{% endblock %}
 
-		{% block media_content_download %}
-		<button type="button" class="action-content download_link btn btn-default pull-right">
-				<a target="_blank" href="{{ current_object.media_file }}">{% trans "download file" %}</a>
-		</button>
-		{% endblock %}
-
 		<div class="html-content summary">{{ current_object.description|smart_style }}</div>
 
-		{% if current_object.get_last_change_date or current_object.source %}
-			<div class="meta-content">
-				{% if current_object.get_last_change_date %}
-					<h6 class="date">{% trans "Last modification date" %}: {{ current_object.get_last_change_date }}</h6>
-				{% endif %}
-
-				{% include "cyclope/source_block.html" with source=current_object.source %}
+		<div class="row">
+			<div class="col-xs-12 col-md-3 deliverables-links">
+				{% block media_content_download %}
+					<button type="button" class="action-content download_link btn btn-default">
+						<a target="_blank" href="{{ current_object.media_file }}">{% trans "download file" %}</a>
+					</button>
+				{% endblock %}
 			</div>
-		{% endif %}
+			<div class="col-xs-12 col-md-9">
+				{% if current_object.get_last_change_date or current_object.source %}
+					<div class="meta-content">
+						{% if current_object.get_last_change_date %}
+							<h6 class="date">{% trans "Last modification date" %}: {{ current_object.get_last_change_date }}</h6>
+						{% endif %}
+
+						{% include "cyclope/source_block.html" with source=current_object.source %}
+					</div>
+				{% endif %}
+			</div>
+		</div>
+
 
 		<div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
+
 
 		{% include 'cyclope/related_contents_block.html' %}
 
