--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -6,6 +6,11 @@ body {
 .clear{
 	clear: both;
 }
+
+.center{
+	float: none;
+	margin: 0 auto;
+}
 /* fix float vertical navbar */
 #left .navbar-nav > li,
 #rigth .navbar-nav > li {
@@ -87,15 +92,37 @@ span.category_title a {
 	margin-top: 10px;
 }
 
+.content-view.document.media.detail .meta-content{
+	padding:5px 0;
+}
+
+.deliverables-links{
+	margin-top: 10px;
+}
+
+.content-view.article.inline_detail.article-inline_detail h3>span{
+	font-size: 15px;
+}
+
 .content-view.document.media.detail .html-content.summary p,
 .content-view.article.inline_detail.article-inline_detail .summary p,
-.content-view.article.inline_detail.article-inline_detail .article_content p{
+.content-view.article.inline_detail.article-inline_detail .article_content p,
+.content-view.externalcontent.media.detail p,
+.content-view.flashmovie.media.detail p{
 	text-align: justify;
 }
 
 .content-view.article.inline_detail.article-inline_detail .pretitle{
 	display: none;
 }
+
+.content-view.document.media.detail,
+.content-view.article.inline_detail.article-inline_detail,
+.content-view.externalcontent.media.detail{
+    padding: 10px 0;
+    border-bottom: solid 2px #f5f5f5;
+}
+
 
 
 /* ### teaser labeled icon ### */
