--- a/cyclope/templates/rosetta/pofile.html
+++ b/cyclope/templates/rosetta/pofile.html
@@ -2,7 +2,7 @@
 {% load rosetta i18n staticfiles %}
 
 {% block extra_head %}
-<link rel="stylesheet" type="text/css" media="screen" href="{% static 'cyclope/css/admin_tools_theming.css' %}" />
+<link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/admin_tools_theming.css' %}" />
 {% endblock %}
 
 {% block header %}
