--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -1,10 +1,10 @@
 {% load fb_versions staticfiles %}
 <head>
     <!--styles-->
-    <link href="{{CYCLOPE_STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <!--scripts-->
-    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}{{ CYCLOPE_JQUERY_PATH }}"></script>
-    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static CYCLOPE_JQUERY_PATH %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'media_widget/media_widget.js' %}"></script>
     <script type="text/javascript">
     $(function(){ // nRows input
