--- a/cyclope/apps/polls/templates/admin/polls/change_form.html
+++ b/cyclope/apps/polls/templates/admin/polls/change_form.html
@@ -1,5 +1,5 @@
 {% extends 'admin/change_form.html' %}
 {% load staticfiles %}
 {% block after_related_objects %}
-    <script type="text/javascript" src="{% static 'cyclope/js/drag_drop.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/drag_drop.js' %}"></script>
 {% endblock %}
