--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -3,7 +3,7 @@
 {% load i18n cyclope_utils fb_versions %}
 
 {% block extra_head %}
-<script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
 <script type="text/javascript">
     // jCarousel documentation http://sorgalla.com/projects/jcarousel/
 
