--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -1,11 +1,11 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
-{% load i18n cyclope_utils crispy_forms_tags %}
+{% load i18n cyclope_utils crispy_forms_tags staticfiles %}
 
 {% block extra_head %}
     {% if CYCLOPE_SEARCH_DATE %}
-        <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_UI_PATH }}"></script>
-	    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/datepicker-es.js"></script>
-        <link href="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_UI_CSS_PATH }}" rel="stylesheet">
+        <script type="text/javascript" src="{% static CYCLOPE_JQUERY_UI_PATH %}"></script>
+	    <script type="text/javascript" src="{% static 'js/datepicker-es.js' %}"></script>
+        <link href="{% static CYCLOPE_JQUERY_UI_CSS_PATH %}" rel="stylesheet">
         <script type="text/javascript">
         $(function() {
 		{# TODO other locales, cyclope-wide setting #}
