fix template import, all tests running

--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils fb_versions staticfiles %}
 
 {% block extra_head %}
 <script type="text/javascript" src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
