--- a/cyclope/core/collections/templates/collections/collection_root_categories_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_list.html
@@ -1,14 +1,28 @@
 {% extends host_template %}
-
+{% load i18n cyclope_utils fb_versions %}
 {% block content %}
-<div class="categories_hierarchy">
-{% if collection.visible %}<div class="title">{{ collection.name }}</div>{% endif %}
-  <ul>
-  {% for category in categories %}
-  <li>
-    <a href="{% url category-teaser_list category.slug %}">{{ category.name }}</a>
-  </li>
-{% endfor %}
-</ul>
-</div>
+     <div class="categories_hierarchy">
+        {% if collection.visible %}
+            <div class="category_description">
+                <span class="category_title">{{ collection.name }}</span>
+                <div class="collection_teaser">
+                    {% if collection.image %}
+                        <img class="image" src="{% version collection.image.path 'fb_thumb' %}" border="0"/>
+                    {% endif %}
+                    {% if collection.description %}
+                        <div class="summary">
+                            {{ collection.description|smart_style }}
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        {% endif %}
+        <ul>
+            {% for category in categories %}
+                <li>
+                    <a href="{% url category-teaser_list category.slug %}">{{ category.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock content%}
