--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -81,3 +81,9 @@ span.category_title a {color:#000;}
 
 /* region clears */
 header, footer, #top, #bottom, #right, #left {clear:both;}
+
+/*### list of root category of a collection ###*/
+.categories_hierarchy .title {font-size:22px; border-top:1px solid; border-bottom:1px solid; font-weight:600; margin-bottom:10px;}
+.categories_hierarchy > ul {font-size:18px;}
+.categories_hierarchy .collection_teaser {margin-bottom:10px;}
+
